fixed the footer in highcontrast

--- a/src/reports/components/instance-details.scss
+++ b/src/reports/components/instance-details.scss
@@ -36,7 +36,7 @@
 }
 
 .instance-details-card.selected:focus {
-    outline-offset: 6px;
+    outline-offset: 8px;
 }
 
 .instance-details-card:hover {
